<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Market Center Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayMarketCenterName"
        style="@style/CommonTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtMarketCenterName"
            style="@style/CommonTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_district"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/button_primary_rounded"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/btn_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLayMarketCenterName" />

    <!-- Cancel Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/button_primary_rounded"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="@id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSubmit"
        app:layout_constraintTop_toTopOf="@id/btnSubmit" />

</androidx.constraintlayout.widget.ConstraintLayout>